slides.css
* {
    margin: 0;
    left: 0;
    padding: 0;
    font-family: 'Poppins', sans-serif;
    overflow: hidden;
}

.slideshow .slide{
    position: absolute;
    width: 100%;
    height: 100%;
    transform: translateX(100%);

}

.slideshow .slide.active{
    transform: translateX(0);
    transition: 250ms;
}

.slideshow .slide img{
    position: absolute;
    width: 90%;
    height: 90%;
    left: 5%;
    top: 2%;
    text-align: center;
    margin: 0 auto;
    object-fit: cover;
}

.slideshow .nav{
    height: 500px;
    display: flex;
    justify-content: space-between;
}

.prev-btn, .next-btn{
    position: relative;
    z-index: 1;
    font-size: 5vh;
    color: rgb(129, 129, 129);
    cursor: pointer;
    top: 50%;
    margin: 5px;
}

.slide-bar{
    /* position: absolute; */
    z-index: 1;
    display: flex;
    justify-content: center;
}

.slide-bar .frame-icon{
    z-index: 1;
    background: rgba(100,100,100, 0.5);
    border-radius: 50px;
    width: 15px;
    height: 15px;
    margin: 15px;
}

.slideshow .slide-bar .frame-icon.active{
    background: rgb(156, 226, 109);
}

